Update .gitignore to ignore data folder and verification images, add .gitkeep to preserve verification_images folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ Thumbs.db
 # TensorFlow / logs
 logs/
 data/
+
+# Ignore photos in verification_images (keep folder structure)
+application_data/verification_images/*.jpg
